# ekko-ce

./: .env.example  .env.template  .gitignore  Ekko Community Edition WhitePaper.md  LICENSE  README.md  TESTING.md  api_performance_test.py  benchmark_data_generator.py  config.yaml  depr-compose.yml  docker-compose.override.yml  docker-compose.yml  duckdb_benchmark.py  go.mod  loki-config.yaml  promtail-config.yaml  requirements.txt
api/: .env.example  .gitignore  (+24 more)
delta-writer/: .env.example  .env.test  Cargo.toml  Dockerfile  README.md  test_service.py
delta-writer/src/: config.rs  delta_writer.rs  event_schema.rs  main.rs  metrics.rs  simple_consumer.rs
wasmcloud/: .dockerignore  .env.example  ALERT-EVALUATION-SYSTEM.md  Cargo.toml  DEPLOYMENT-COMPARISON.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_STATUS.md  DUCKLAKE_IMPLEMENTATION.md  ENV_CONFIG.md  IMPLEMENTATION-SUMMARY.md  Makefile  PROVIDER-MIGRATION-SUMMARY.md  README.md  build-actors.sh  build-provider.sh  build.sh  ci-deploy-actors.sh  cleanup-old-deployment.sh  deploy-operator.sh  ekko-actors.wadm.yaml  eth-process-transactions-app.yaml  fix-links.sed  generate-manifest.sh  local-registry.yaml  nats-subjects.md  push-actors-to-registry.sh  push-providers-to-registry.sh  rebuild-providers-clean.sh  seed-redis-network-configs.sh  setup-configs.sh  test-manifest.yaml  test_results_summary.md  verify-deployment.sh  verify-wadm-deployment.sh  wadm.yaml  wasmcloud-host-config-simple.yaml  wasmcloud-host-config.yaml
wasmcloud/.wash-home/.wash/contexts/: default  host_config.json
wasmcloud/.wash-home/.wash/keys/: abi-decoder-provider-aarch64-linux_service.nk  abrahamalaka_account.nk  alert-scheduler-provider-aarch64-linux_service.nk  alert-scheduler-provider_service.nk  ducklake-read-provider-aarch64-linux_service.nk  ducklake-write-provider-aarch64-linux_service.nk  email-notification-provider-aarch64-linux_service.nk  http-rpc-provider-aarch64-linux_service.nk  newheads-evm-provider-aarch64-linux_service.nk  polars-eval-provider-aarch64-linux_service.nk  polars-eval-provider_service.nk  slack-notification-provider-aarch64-linux_service.nk  telegram-notification-provider-aarch64-linux_service.nk  webhook-notification-provider-aarch64-linux_service.nk  websocket-notification-provider-aarch64-linux_service.nk
wasmcloud/.wash-home/keys/: abrahamalaka_account.nk  ducklake-write-provider-aarch64-linux_service.nk  notification_router_module.nk
wasmcloud/actors/: README-ETH-PROCESSORS.md
wasmcloud/actors/abi-decoder/: Cargo.toml  test-abi-decoder.sh  test-ducklake-e2e.sh  wasmcloud.toml
wasmcloud/actors/abi-decoder/benches/: abi_decoder_bench.rs  abi_decoder_bench_simple.rs
wasmcloud/actors/abi-decoder/src/: abi_fetcher.rs  lib.rs  tests.rs
wasmcloud/actors/abi-decoder/wit/: world.wit
wasmcloud/actors/alerts-processor/: Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
wasmcloud/actors/alerts-processor/src/: arrow_frame.rs  catalog.rs  lib.rs  runtime.rs
wasmcloud/actors/alerts-processor/wit/: world.wit
wasmcloud/actors/btc_raw_transactions/: Cargo.toml
wasmcloud/actors/btc_raw_transactions/src/: lib.rs
wasmcloud/actors/btc_raw_transactions/wit/: world.wit
wasmcloud/actors/eth_contract_creation_processor/: Cargo.toml  wasmcloud.toml
wasmcloud/actors/eth_contract_creation_processor/src/: lib.rs
wasmcloud/actors/eth_contract_transaction_processor/: Cargo.toml  wasmcloud.toml
wasmcloud/actors/eth_process_transactions/: Cargo.toml  README.md  wasmcloud.toml
wasmcloud/actors/eth_raw_transactions/: Cargo.toml  README.md  manifest.yaml  redis_config_examples.md  wasmcloud.toml
wasmcloud/actors/eth_transfers_processor/: Cargo.toml  README.md  wasmcloud.toml
wasmcloud/actors/evm_logs_ingestion/: Cargo.toml  wasmcloud.toml
wasmcloud/actors/health-check/: Cargo.toml  manifest.yaml
wasmcloud/actors/notification-router/: Cargo.toml  README.md  build.sh
wasmcloud/actors/sol_raw_transactions/: Cargo.toml
wasmcloud/actors/transaction-ducklake-writer/: Cargo.toml  README.md  wasmcloud.toml
wasmcloud/actors/transaction-processor/: Cargo.toml  manifest.yaml
wasmcloud/chart/: Chart.yaml  README.md  values-new.yaml  values.minikube.yaml  values.official.yaml  values.production.yaml  values.yaml
wasmcloud/chart/charts/: wasmcloud-platform-0.1.2.tgz
wasmcloud/chart/templates/: NOTES.txt  _helpers.tpl
wasmcloud/config/: nats-config.toml
wasmcloud/docs/: ducklake-capability.md
wasmcloud/links/: actor-to-newheads.yaml
wasmcloud/manifests/: dev-updated.yaml  dev.yaml  ekko-actors-generated.yaml  ekko-actors.template.yaml  ekko-actors.yaml  notification-router.yaml  production.yaml
wasmcloud/providers/: newheads.yaml
wasmcloud/providers/abi-decoder/: Cargo.toml  README.md
wasmcloud/providers/alert-scheduler/: .todo  Cargo.toml  DEPLOYMENT.md
wasmcloud/providers/ducklake-read/: Cargo.toml
wasmcloud/providers/ducklake-write/: Cargo.toml
wasmcloud/providers/email-notification-provider/: Cargo.toml
wasmcloud/providers/http-rpc/: Cargo.toml
wasmcloud/providers/newheads-evm/: .gitignore  Cargo.toml  Makefile  README.md  build-wasmcloud.sh  manifest.yaml  newheads-provider  wasmcloud-app.yaml
wasmcloud/providers/polars-eval/: Cargo.toml  README.md
wasmcloud/providers/slack-notification-provider/: Cargo.toml  wasmcloud.toml
wasmcloud/providers/telegram-notification-provider/: Cargo.toml  wasmcloud.toml
wasmcloud/providers/webhook-notification-provider/: Cargo.toml  wasmcloud.toml
wasmcloud/providers/websocket-notification-provider/: Cargo.toml  README.md  wasmcloud.toml
wasmcloud/scripts/: nats_provider_smoke.py
wasmcloud/shared/alert-runtime-common/: Cargo.toml
wasmcloud/shared/ducklake-common/: Cargo.toml
wasmcloud/shared/notification-common/: Cargo.toml
wasmcloud/shared/provider-status-common/: Cargo.toml
wasmcloud/shared/subject-registry/: Cargo.toml
wasmcloud/tests/integration/: alert_evaluation_pipeline_test.rs  mod.rs
wasmcloud/tests/unit/: test_nats_provider_smoke.py
wasmcloud/wit/: ekko-ducklake.wit  eth-raw-transactions.wit
wasmcloud/wit/ekko/: http.wit
(+1002 files in other folders)
