[package]
name = "evm_logs_ingestion"
version = "0.1.0"
edition = "2021"
authors = ["abrahamalaka <abraham@ekko.zone>"]
description = "wasmCloud actor for ingesting EVM logs and scheduling alert evaluations"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
alert-runtime-common = { workspace = true }

[dev-dependencies]
proptest = "1.0"
