[package]
name = "health-check"
authors = ["abrahamalaka <abraham@ekko.zone>"]
description = "wasmCloud Health Check Actor for Ekko Consumer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WasmCloud 1.0 Component dependencies
wit-bindgen = { workspace = true }
wasmcloud-component = { workspace = true }

# Use workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# Shared libraries (only if still needed)
wasmcloud-common = { workspace = true }
types = { workspace = true }
