[package]
name = "ducklake-write-provider"
version = "1.0.0"
edition = "2021"
authors = ["Ekko Team"]
description = "wasmCloud provider for writing blockchain data to DuckLake via NATS subjects"

[dependencies]
# Shared DuckLake types and utilities
ducklake-common = { path = "../../shared/ducklake-common" }

# DuckDB for database operations
duckdb = { version = "1.0", features = ["bundled"] }

# wasmCloud 1.0 provider SDK
wasmcloud-provider-sdk = "0.16"

# NATS messaging for subject subscription
async-nats = { workspace = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }

# UUID for operation tracking
uuid = { workspace = true }

# Micro-batching and buffering
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[lib]
name = "ducklake_write_provider"
path = "src/lib.rs"

# wasmCloud provider binary
[[bin]]
name = "ducklake-write-provider"
path = "src/bin/ducklake-write-provider.rs"
