[package]
name = "http-rpc-provider"
version = "0.1.0"
edition = "2021"
authors = ["Ekko Team"]
description = "HTTP RPC provider for blockchain calls in WasmCloud actors"

[lib]
name = "http_rpc_provider"
path = "src/lib.rs"

# wasmCloud provider binary for WADM deployment
[[bin]]
name = "http-rpc-provider"
path = "src/bin/http-rpc-provider.rs"

[dependencies]
# WasmCloud provider SDK with WIT support
wasmcloud-provider-sdk = "0.16.0"
# wit-bindgen is included in wasmcloud-provider-sdk 0.16.0

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# HTTP client - providers can use any dependencies
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Redis for caching
redis = { workspace = true }

# Circuit breaker and resilience
parking_lot = { workspace = true }

# Other utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
wrpc-interface-http = "0.26.0"
wrpc-types = "0.6.0"
