[package]
name = "telegram-notification-provider"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "telegram-notification-provider"
path = "src/main.rs"

[lib]
name = "telegram_notification_provider"
path = "src/lib.rs"

[dependencies]
# wasmCloud provider SDK
wasmcloud-provider-sdk = "0.16"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# NATS client
async-nats = { workspace = true }

# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Web server for webhook
warp = "0.3"

# Stream utilities
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and ID
chrono = { workspace = true }
uuid = { workspace = true }
