[package]
name = "webhook-notification-provider"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "webhook-notification-provider"
path = "src/main.rs"

[lib]
name = "webhook_notification_provider"
path = "src/lib.rs"

[dependencies]
# wasmCloud provider SDK
wasmcloud-provider-sdk = "0.16"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# NATS messaging
async-nats = "0.33"
futures-util = "0.3"

# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client with retry
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography for HMAC
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Time
chrono = "0.4"

# Random for jitter
rand = "0.8"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.12"
